RESOLVED FIXED119444
Buildfix for !ENABLE(SVG) platforms after r153581
https://bugs.webkit.org/show_bug.cgi?id=119444
Summary Buildfix for !ENABLE(SVG) platforms after r153581
Zoltan Arvai
Reported 2013-08-02 06:54:43 PDT
Patch is coming soon. /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp: In function ‘const WebCore::StylePropertyShorthand& WebCore::markerShorthand()’: /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:236:9: error: ‘CSSPropertyMarkerStart’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:237:9: error: ‘CSSPropertyMarkerMid’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:238:9: error: ‘CSSPropertyMarkerEnd’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:240:5: error: ‘CSSPropertyMarker’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp: In function ‘const WTF::Vector<const WebCore::StylePropertyShorthand*> WebCore::matchingShorthandsForLonghand(WebCore::CSSPropertyID)’: /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:769:17: error: ‘CSSPropertyMarkerStart’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:770:17: error: ‘CSSPropertyMarkerMid’ was not declared in this scope /ramdisk/qt-linux-release-minimal/build/Source/WebCore/css/StylePropertyShorthand.cpp:771:17: error: ‘CSSPropertyMarkerEnd’ was not declared in this scope These are generated from SVGCSSPropertyNames.in that guarded by ENABLE_SVG.
Attachments
buildfix (2.71 KB, patch)
2013-08-02 06:57 PDT, Zoltan Arvai
kling: review+
kling: commit-queue-
buildfix (2.65 KB, patch)
2013-08-02 07:15 PDT, Zoltan Arvai
no flags
Zoltan Arvai
Comment 1 2013-08-02 06:57:55 PDT
Created attachment 208012 [details] buildfix Adding guards for SVG related parts.
Andreas Kling
Comment 2 2013-08-02 06:59:02 PDT
Comment on attachment 208012 [details] buildfix View in context: https://bugs.webkit.org/attachment.cgi?id=208012&action=review r=me > Source/WebCore/css/StylePropertyShorthand.cpp:233 > +#if defined(ENABLE_SVG) && ENABLE_SVG This should just be #if ENABLE(SVG) > Source/WebCore/css/StylePropertyShorthand.cpp:769 > +#if defined(ENABLE_SVG) && ENABLE_SVG Ditto. > Source/WebCore/css/StylePropertyShorthand.h:88 > +#if defined(ENABLE_SVG) && ENABLE_SVG Ditto.
Zoltan Arvai
Comment 3 2013-08-02 07:15:15 PDT
Created attachment 208017 [details] buildfix Buildfix with corrected guards.
WebKit Commit Bot
Comment 4 2013-08-02 08:39:46 PDT
Comment on attachment 208017 [details] buildfix Clearing flags on attachment: 208017 Committed r153650: <http://trac.webkit.org/changeset/153650>
WebKit Commit Bot
Comment 5 2013-08-02 08:39:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.