Buildfix for !ENABLE(SVG) platforms after r153581. https://bugs.webkit.org/show_bug.cgi?id=119444

Reviewed by Andreas Kling.

Adding missing guards.

* css/StylePropertyShorthand.cpp:
(WebCore::matchingShorthandsForLonghand):
* css/StylePropertyShorthand.h:


Canonical link: https://commits.webkit.org/137391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153650 268f45cc-cd09-0410-ab3c-d52691b4dbfc